# SchottenTotten

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake_build.yml  lint.yml  pre_commit.yml
cmake/: Toolchain-cross-MinGW-w64-x86_64.cmake
docs/: build.sh  classes.puml  eisvogel.latex
include/: board.hpp  border.hpp  button_view.hpp  card_layout.hpp  card_model.hpp  card_view.hpp  clanCard.hpp  clan_card_model.hpp  deck.hpp  deck_model.hpp  formation_view.hpp  game.hpp  game_model.hpp  game_robot_model.hpp  game_view.hpp  illegal_move.hpp  illegal_move_exception.hpp  image_manager.hpp  mainwindow.hpp  player.hpp  player_model.hpp  player_robot_model.hpp  rule.hpp  rule_color.hpp  rule_color_run.hpp  rule_run.hpp  rule_same.hpp  startModal.hpp  stone.hpp  stone_model.hpp  stone_view.hpp  window.hpp
resources/woods/: credit.txt  wood.avif
script/: cards.py  cropping.py  number.py  numbering.py  requirements.txt
src/: board.cpp  border.cpp  button_view.cpp  card_layout.cpp  card_view.cpp  clanCard.cpp  clan_card_model.cpp  deck.cpp  deck_model.cpp  formation_view.cpp  game.cpp  game_model.cpp  game_robot_model.cpp  game_view.cpp  image_manager.cpp  main.cpp  mainwindow.cpp  player.cpp  player_model.cpp  player_robot_model.cpp  rule_color.cpp  rule_run.cpp  rule_same.cpp  startModal.cpp  stone.cpp  stone_model.cpp  stone_view.cpp  window.cpp
